<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/home_titlebar_bkg" >

        <ImageView
            android:id="@+id/about_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/about_back" />


        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/about"
            android:textColor="@color/home_title_text"
            android:textSize="16sp"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/about_ll" >

            <TextView
                android:id="@+id/version_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/about_icon"
                android:text="@string/about_item_version_info"
                android:textColor="@color/about_item_text_l"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/about_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about_item_selector"
                android:paddingBottom="12dp"
                android:paddingTop="12dp" 
                android:focusable="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="@string/about_item_version"
                    android:textColor="@color/about_item_text_l"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:text="@string/about_item_newVersion"
                    android:textColor="@color/about_item_text_s"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/about_item_selector"
                android:paddingBottom="12dp"
                android:paddingTop="12dp" 
                android:focusable="true"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:drawableRight="@drawable/about_arrow_rigtht"
                    android:gravity="left"
                    android:text="@string/about_item_function"
                    android:textColor="@color/about_item_text_l"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/about_me"
            android:textColor="@color/about_item_text_l"
            android:textSize="13sp" />
    </RelativeLayout>

</LinearLayout>